# bibliophile-sp

./: .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.mac  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  test_setup.py
.github/workflows/: ci.yml
src/: __init__.py  analysis.py  cli.py  data_profiler.py  main.py  oneapi_accelerator.py  run_sp_analysis.py  sp_data_analysis.py  spapi.py  visualization.py
tests/: __init__.py  test_analysis.py  test_apple_accelerate.py  test_oneapi_integration.py  test_sp_data_analysis.py  test_spapi.py
